<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/prenominput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/requesterinput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/prenominput"
        android:layout_alignStart="@+id/prenominput"
        android:layout_below="@+id/prenominput"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="@string/yourname"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/valid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/validate" />
</RelativeLayout>