<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context="com.projet.florianepeltier.mobileproject.MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcome"
        style="@android:style/Theme.Holo.Panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/vote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/welcome"
        android:layout_marginTop="17dp"
        android:gravity="center_horizontal"
        android:text="@string/vote" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/vote"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:drawableLeft="@android:drawable/ic_media_play"
        android:gravity="center_horizontal"
        android:onClick="startOnClick"
        android:text="@string/start" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp"
        app:srcCompat="@drawable/bebe" />


</RelativeLayout>
